[package]
name = "ztssh-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
ztssh-crypto = { path = "../crates/ztssh-crypto" }
ztssh-protocol = { path = "../crates/ztssh-protocol" }
ztssh-ca = { path = "../crates/ztssh-ca" }
ztssh-transport = { path = "../crates/ztssh-transport" }

# Prevent this from interfering with workspace members
[workspace]
members = ["."]

[[bin]]
name = "fuzz_certificate_wire"
path = "fuzz_targets/fuzz_certificate_wire.rs"
doc = false

[[bin]]
name = "fuzz_intermediate_wire"
path = "fuzz_targets/fuzz_intermediate_wire.rs"
doc = false

[[bin]]
name = "fuzz_identity_challenge"
path = "fuzz_targets/fuzz_identity_challenge.rs"
doc = false

[[bin]]
name = "fuzz_identity_proof"
path = "fuzz_targets/fuzz_identity_proof.rs"
doc = false

[[bin]]
name = "fuzz_identity_ack"
path = "fuzz_targets/fuzz_identity_ack.rs"
doc = false

[[bin]]
name = "fuzz_session_terminate"
path = "fuzz_targets/fuzz_session_terminate.rs"
doc = false

[[bin]]
name = "fuzz_handshake_client_hello"
path = "fuzz_targets/fuzz_handshake_client_hello.rs"
doc = false

[[bin]]
name = "fuzz_handshake_server_hello"
path = "fuzz_targets/fuzz_handshake_server_hello.rs"
doc = false

[[bin]]
name = "fuzz_handshake_cert_renewal"
path = "fuzz_targets/fuzz_handshake_cert_renewal.rs"
doc = false
