[package]
name = "ztssh-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZTSSH structured audit logging — security events, session lifecycle, verification outcomes"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
